# GrinVi

./: .env.example  .gitattributes  .gitignore  POSTMORTEM_2026_05_17.md  README.md  TRAINING_RUNBOOK.md  chat.py  patch_dataset.py  pyproject.toml  requirements.txt  test_shape.py  test_tok2.py  verify_data.py  verify_model_logits.py
.kiro/steering/: known-bugs.md
data/merged/: archive.jsonl  text.jsonl
data/raw/: chatbot_data.jsonl
docs/: vast_ai_guide.md
grinvi/: __init__.py  config.py  generate.py  model.py  tokenizer.py  tokenizer_morph.py  tokenizer_sp.py  trainer.py
scripts/: audit_unk.py  backup_checkpoints.sh  benchmark.py  check_gdrive.sh  diagnose.py  download_hf_datasets.py  download_korean_data.py  download_wanjuan.py  gemini_chat.py  generate.py  generate_training_data.py  korean_chat_gemini.py  make_eval_split.py  migrate_data.py  monitor_advanced.py  patch.py  preflight_train.py  prepare_data.py  pull_gdrive_data.sh  quickstart_korean.sh  retrain_tokenizer.py  start_vast.sh  train.py  train_pipeline.py  train_real_small.sh  train_real_tiny.sh  train_tokenizer.py  train_with_monitor.sh  update_train.py  verify_tokenizer_match.py
tests/: test_korean_exam_cli.py  test_korean_exam_collectors.py  test_korean_exam_formatter.py  test_korean_exam_local.py  test_korean_exam_models.py  test_korean_exam_parsers.py  test_korean_exam_pdf_collector.py  test_korean_exam_pdf_parser.py  test_korean_exam_pipeline.py  test_korean_exam_validator.py  test_storage.py  test_tok.py  test_tokenizer.py  test_unk.py  test_unk_trigger.py  verify_model_logits_fixed.py
(+59 files in other folders)
